--- a/style.css
+++ b/style.css
@@ -19,22 +19,28 @@ body {
 }
 .container {
     background-color: rgb(0, 0, 0);
-    max-width: 500px;
-    min-width: 500px;
     display: flex;
     align-items: center;
+    max-width: 500px;
+    min-width: 500px;
     justify-content: center;
     flex-direction: column;
     position: relative;
     border: 5px solid rgb(255, 255, 255);
 }
 .display {
-    padding: 10px 15px 5px 3px;
+    padding: 10px 5px 5px 5px;
     font-size: 50px;
     background-color: gray;
     width: 100%;
+    height: 100%;
     text-align: right;
     overflow-x: scroll;
+    white-space: nowrap;
+}
+.display {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: 5px;  /* Firefox, Safari 18.2+, Chromium 121+ */
 }
 .buttonGrid {
     width: 100%;
